--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link ></link>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
 <title>
   
 </title
